--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serenity = "0.11.5"
+serenity = { version = "0.11.5", default-features = false, features = ["model"] }
