--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ edition = "2021"
 
 [dependencies]
 serenity = { version = "0.11.5", default-features = false, features = ["model"] }
+tokio = { version = "1.23.0", features = ["rt-multi-thread"] }
