--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+dotenv = "0.15.0"
 serenity = "0.11.5"
 tokio = { version = "1.23.0", features = ["rt-multi-thread"] }
