--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,10 @@ edition = "2021"
 
 [dependencies]
 dotenv = "0.15.0"
-serenity = "0.11.5"
+serenity = { version = "0.11.5", default-features = false, features = [
+  "client",
+  "gateway",
+  "rustls_backend",
+  "model",
+] }
 tokio = { version = "1.23.0", features = ["rt-multi-thread"] }
